--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
 	<script src="sketch.js"></script>
+    <script src="emilt.js"></script>
+    <script src="mads.js"></script>
 </body>
 
 </html>
