--- a/madsIndex.html
+++ b/madsIndex.html
@@ -12,7 +12,7 @@
 	<script src="mads.js"></script>
     <script src="emilt.js"></script>
     <script src="primærSide.js"></script>
-	<script src="sketch.js"></script>
+	<script src="platformType.js"></script>
 </body>
 
 </html>
