--- a/madsIndex.html
+++ b/madsIndex.html
@@ -10,9 +10,9 @@
 
 <body>
 	<script src="mads.js"></script>
-    <script src="emilt.js"></script>
     <script src="primærSide.js"></script>
 	<script src="platformType.js"></script>
+	<script src="blokTest.js"></script>
 </body>
 
 </html>
