Slutningen af dagen - 19 - 3

--- a/madsIndex.html
+++ b/madsIndex.html
@@ -12,7 +12,7 @@
 	<script src="mads.js"></script>
     <script src="primærSide.js"></script>
 	<script src="platformType.js"></script>
-	<script src="blokTest.js"></script>
+	<script src="testCha.js"></script>
 </body>
 
 </html>
