test med god mode

--- a/emil.html
+++ b/emil.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <script src="emilt.js"></script>
+    <!-- <script src="emilt.js"></script> -->
+	<script src="test(emil).js"></script>
 </body>
 
 </html>
