--- a/emil.html
+++ b/emil.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <!-- <script src="emilt.js"></script> -->
+    <script src="emilt.js"></script>
 	<script src="test(emil).js"></script>
+	<script src="combine.js"></script>
+	<script src="player(Emil).js"></script>
 </body>
 
 </html>
